dev-24: add router, handlers for parser, fix bugs, format code
